--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "social_media_rest_api",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
   "author": "PrinceStiles",
@@ -12,7 +13,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.1.5",
-    "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
